# TASS_project

./: README.md  embeddings.py  find_knn.py  load_pg_catalog.py  main.py  requirements.txt  test_embeddings.py
data/: book_recommendations.json  literary_periods.py  pg_catalog_to_cluster.csv
embeddings/: config.py  embeddings.py  process_pg_data.py  requirements.txt
gutenberg_authors_parser/: .gitignore  README.md  requirements.txt  setup.cfg
gutenberg_authors_parser/data/: authors_data.csv  authors_data.txt  authors_wiki.csv  dynamodb_dump.sh  head_1000_unique_authors_wiki.csv  head_1000_unique_authors_wiki_rest.csv  unique_authors_wiki.csv  unique_authors_wiki_0.csv  unique_authors_wiki_1.csv  unique_authors_wiki_2.csv  unique_authors_wiki_3.csv
gutenberg_authors_parser/gutenberg_parser/: convert_txt_to_csv.py  drop_duplicates.py  extract_wikipedia_links.py  join_data.py  parse_books_data.py
scrapers/: .gitignore  README.md  cdk.json  package-lock.json  package.json
scrapers/lambda/query_wikidata/: .dockerignore  index.py  requirements-dev.txt  requirements.txt
scrapers/lambda/save_data/: index.py  requirements.txt
scrapers/lambda/wikipedia_scraper/: .gitignore  index.py  requirements.txt
scrapers/lambda/wikipedia_scraper_orchestrator/: .dockerignore  index.py  requirements-dev.txt  requirements.txt  test.csv
scrapers/lib/: scrapers-stack.ts
scrapers/test/: scrapers.test.ts
tests/: test_embeddings.py
