[metadata]
name = gutenberg_parser
version = 0.1.0
description = "Gutenberg authros data parser"
long_description = file: README.md
classifiers =
    Programming Language :: Python

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    rdflib~=6.1.1
    pandas~=1.3.5

